--- a/.github/workflows/GreetingKata.yaml
+++ b/.github/workflows/GreetingKata.yaml
@@ -22,3 +22,13 @@ jobs:
       - name: Run tests
         run: dotnet test --no-build --verbosity normal
         continue-on-error: false
+
+        
+      - name: Execute push
+        run: |
+          dotnet nuget add source \
+            --username MatteoCirio \
+            --password ${{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}} \
+            --store-password-in-clear-text \
+            --name github "http://nuget.pkg.github.com/MatteoCirio/index.json"
+
