--- a/.github/workflows/GreetingKata.yaml
+++ b/.github/workflows/GreetingKata.yaml
@@ -28,7 +28,7 @@ jobs:
         run: |
           dotnet nuget add source \
             --username MatteoCirio \
-            --password ${{"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"}} \
+            --password ${{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}} \
             --store-password-in-clear-text \
             --name github "http://nuget.pkg.github.com/MatteoCirio/index.json"
 
