--- a/.github/workflows/GreetingKata.yaml
+++ b/.github/workflows/GreetingKata.yaml
@@ -23,6 +23,8 @@ jobs:
         run: dotnet test --no-build --verbosity normal
         continue-on-error: false
 
+      - name: Execute pack
+        run: dotnet pack --configuration Release /p:PackageVersion=1.0.${{ github.run_number }}
         
       - name: Execute push
         run: |
