--- a/.github/workflows/GreetingKata.yaml
+++ b/.github/workflows/GreetingKata.yaml
@@ -27,7 +27,7 @@ jobs:
         run: dotnet pack --configuration Release /p:PackageVersion=1.0.${{ github.run_number }}
 
       - name: Push to NuGet
-        run: dotnet nuget push **/*.nupkg --source <http://nuget.pkg.github.com/MatteoCirio/index.json> --api-key ${{ secrets.TRYPACKAGE }}
+        run: dotnet nuget push **/*.nupkg --source https://nuget.pkg.github.com/MatteoCirio/index.json --api-key ${{ secrets.TRYPACKAGE }}
         
       - name: Execute push
         run: |
